[metadata]
name = trelloha
url = https://github.com/jd/trelloha
summary = Manage Trello boards
description-file =
    README.rst
author = Julien Danjou
author-email = julien@danjou.info
home-page = https://github.com/jd/trelloha
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Topic :: Utilities

[entry_points]
console_scripts =
    trelloha = trelloha:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = trelloha

[wheel]
universal = 1
